--- a/dohater_site/static/css/navbar.css
+++ b/dohater_site/static/css/navbar.css
@@ -1,88 +1,131 @@
-.navbar{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0px;
-    width: 100%;
-}
-
-.topbar{
-    height: 60px;
-    background: var(--barguny_color);
-}
-
-.bar{
-    width: 1280px;
-    display: flex;
-    margin: auto;
-}
-
 .container{
-    width: 100%;
-}
-
-.navbar a, p{
-    font-size: 20px;
-    color: var(--white_color);
+    display: flex;
+    align-items: center;
     vertical-align: middle;
 }
 
-.navbar div{
+.nav-wrapper{
+    width: 1280px;
+    margin: auto;
     display: flex;
     align-items: center;
-    flex-direction: row;
-}
-
-.nav-icon-block{
-    display: flex;
-    gap: 20px;
-}
-
-.mg-r-20{
-    margin-right: 20px;
-}
-
-.center{
-    display: flex;
-    align-items: center;
-}
-
-.mg-l-95{
-    margin-left: 95px;
-}
-
-.mg-auto{
-    width: 100%;
-    justify-content: space-between;
-}
-
-.v-align-center{
-    vertical-align: middle;
 }
 
 .nav{
+    display: flex;
     justify-content: space-between;
-    padding: 40px 0px;
+}
+
+.nav-left{
+    width: 100%;
+}
+
+.nav-right{
+    height: 24px;
+}
+
+.gap{
+    gap: 95px;
+}
+
+.bg-burgundy{
+    background: var(--burgundy_color);
+}
+
+.bg-red{
     background: var(--red_color);
+}
+
+.slim{
+    height: 60px;
+}
+
+.fat{
+    height: 150px;
+}
+
+.ico{
+    margin-right: 20px;
+    size: 24px;
+}
+
+.ico svg{
+    margin: auto;
+}
+
+.nav a{
+    color: var(--white_color);
+    text-decoration: none;
 }
 
 .search{
     width: 100%;
-}
-
-.search input{
-    background: var(--white_color);
-    width: 100%;
+    height: 29px;
+    padding: 18px 40px;
     border-radius: 64px;
     border: 3px solid var(--purple_color);
-    padding: 18px 40px;
+    margin-left: 48px;
 }
 
-.search input:focus{
-    border: 3px solid var(--train_red);
+#burger{
+    display: none;
 }
 
-.botbar{
-    justify-content: space-between;
-    gap: 52px;
+@media screen and (max-width: 1360px) {
+    .nav-wrapper{
+        width: 100%;
+        padding: 0px 40px
+    }
+}
+
+
+@media screen and (max-width: 1280px) {
+    .info{
+        display: none;
+    }
+
+    .nav-left{
+        justify-content: flex-start;
+        gap: 40px;
+    }
+
+    .gap{
+        gap: 40px;
+    }
+
+    #logo{
+        display: none;
+    }
+
+    #burger{
+        display: block;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .nav-wrapper{
+        padding: 0px 20px
+    }
+
+    .ico{
+        margin-right: 0px;
+    }
+
+    .info-2{
+        display: none;
+    }
+
+    .gap{
+        gap: 40px;
+    }
+
+    .search{
+        margin-left: 20px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .info-3{
+        display: none;
+    }
 }
