--- a/dohater_site/templates/cdo_ska/index.html
+++ b/dohater_site/templates/cdo_ska/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    {% block links %}
+    {% endblock links %}
     <title>{{ app_name }}</title>
 </head>
 <body>
@@ -44,6 +46,9 @@
                 <input class="headerfont search" placeholder="Найти вопрос, ответ, тему или раздел" type="text">
             </div>
         </div>
+        <div class="line"></div>
     </nav>
+    {% block content %}
+    {% endblock content %}
 </body>
 </html>
