--- a/dohater_site/templates/cdo_ska/home.html
+++ b/dohater_site/templates/cdo_ska/home.html
@@ -62,9 +62,37 @@
             </div>
         </div>
         <div class="main">
+            <div class="founded headerfont">
+                <span class="count">18</span> Тестов найдено
+            </div>
+            <div class="content">
 
+                <div class="element mainfont topelement">
+                    <div class="number">№</div>
+                    <div class="test_name">Название теста</div>
+                    <div class="questions">Вопросы</div>
+                </div>
+
+                <div class="line cline"></div>
+
+                <div class="element mainfont">
+                    <div class="number">1</div>
+                    <div class="test_name">Распоряжение ОАО «РЖД» от 12 декабря 2017 г № 2580р пункт 54 Действия машиниста встречного поезда при вынужденной остановке поезда на перегоне Ответы СДО</div>
+                    <div class="questions">2</div>
+                </div>
+                <div class="element mainfont">
+                    <div class="number">1</div>
+                    <div class="test_name">Распоряжение ОАО «РЖД» от 12 декабря 2017 г № 2580р пункт 54 Действия машиниста встречного поезда при вынужденной остановке поезда на перегоне Ответы СДО</div>
+                    <div class="questions">2</div>
+                </div>
+                <div class="element mainfont">
+                    <div class="number">1</div>
+                    <div class="test_name">Распоряжение ОАО «РЖД» от 12 декабря 2017 г № 2580р пункт 54 Действия машиниста встречного поезда при вынужденной остановке поезда на перегоне Ответы СДО</div>
+                    <div class="questions">2</div>
+                </div>
+            </div>
         </div>
-    </div>
+    </div> 
 </div>
 
 {% endblock content %}
