--- a/dohater_site/static/css/home.css
+++ b/dohater_site/static/css/home.css
@@ -13,6 +13,8 @@
     width: 290px;
     background: var(--red_color);
     color: var(--white_color);
+    position: absolute;
+    top: 212px;
 }
 
 .sidebar-inner{
@@ -74,4 +76,83 @@
 
 .checkbox:checked+label::before {
     background-image: url("../svg/check yes.svg");
+}
+
+.main{
+    margin-left: 330px;
+}
+
+.founded{
+    margin: 40px 0px 20px 40px;
+    font-weight: 500;
+}
+
+.count{
+    color: var(--train_red_color);
+    margin-right: 20px;
+}
+
+.content{
+    background: var(--red_color);
+    border-radius: 24px;
+}
+
+.content:last-child{
+    padding-bottom: 40px;
+}
+
+.element{
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+    padding: 10px 40px;
+    color: white;
+    font-size: 24px;
+}
+
+.topelement{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.cline{
+    margin-bottom: 30px;
+}
+
+@media screen and (max-width: 1280px) {
+    .sidebar{
+        display: none;
+    }
+
+    .inner{
+        width: 100%;
+    }
+
+    .main{
+        margin-left: 0px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .sidebar{
+        display: none;
+    }
+
+    .inner{
+        width: 100%;
+    }
+
+    .main{
+        margin-left: 0px;
+        width: 100%;
+    }
+
+    .number{
+        display: none;
+    }
+
+    .element{
+        gap: 20px;
+    }
 }
