--- a/dohater_site/templates/cdo_ska/index.html
+++ b/dohater_site/templates/cdo_ska/index.html
@@ -50,5 +50,8 @@
     </nav>
     {% block content %}
     {% endblock content %}
+    <footer class="footer">
+        
+    </footer>
 </body>
 </html>
