--- a/dohater_site/templates/cdo_ska/index.html
+++ b/dohater_site/templates/cdo_ska/index.html
@@ -19,10 +19,10 @@
                 <div class="nav-left nav">
                     <a class="headerfont f-s-18 info">CDO_CKA - Прохождение тестов СДО ОАО “РЖД”</a>
                     <a class="headerfont bold" href="">заказать <span class="info-3">выполнение</span> <span class="info-2">тестов</span></a>
-                    <a class="headerfont" href="">связаться</a>
+                    <a class="headerfont info-4" href="">связаться</a>
                 </div>
                 <div class="nav-right nav">
-                    <a class="ico" href="">
+                    <a id="ico-header" class="ico" href="">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0.000976562 11.52C0.000976562 6.08942 0.000976682 3.37413 1.68804 1.68707C3.37511 0 6.0904 0 11.521 0H12.481C17.9116 0 20.6268 0 22.3139 1.68707C24.001 3.37413 24.001 6.08942 24.001 11.52V12.48C24.001 17.9106 24.001 20.6259 22.3139 22.3129C20.6268 24 17.9116 24 12.481 24H11.521C6.0904 24 3.37511 24 1.68804 22.3129C0.000976682 20.6259 0.000976562 17.9106 0.000976562 12.48V11.52Z" fill="#0077FF"/>
                             <path d="M12.8136 17.3501C7.40866 17.3501 4.12946 13.5931 4.00098 7.3501H6.73844C6.82377 11.9361 8.90635 13.8794 10.5028 14.279V7.3501H13.1262V11.3078C14.666 11.1368 16.2778 9.33665 16.8196 7.3501H19.4017C18.9885 9.79294 17.2338 11.5931 15.994 12.3357C17.2348 12.9361 19.231 14.5076 20.001 17.3501H17.1628C16.5636 15.45 15.0956 13.9783 13.1271 13.7785V17.3501H12.8136Z" fill="white"/>
@@ -52,15 +52,24 @@
     {% block content %}
     {% endblock content %}
     <footer class="footer">
-        <img id="logo" src="{% static 'images/logo.png' %}" alt="" class="logo">
-        <div class="footer-text"></div>
-        <a class="ico" href="">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0.000976562 11.52C0.000976562 6.08942 0.000976682 3.37413 1.68804 1.68707C3.37511 0 6.0904 0 11.521 0H12.481C17.9116 0 20.6268 0 22.3139 1.68707C24.001 3.37413 24.001 6.08942 24.001 11.52V12.48C24.001 17.9106 24.001 20.6259 22.3139 22.3129C20.6268 24 17.9116 24 12.481 24H11.521C6.0904 24 3.37511 24 1.68804 22.3129C0.000976682 20.6259 0.000976562 17.9106 0.000976562 12.48V11.52Z" fill="#0077FF"/>
-                <path d="M12.8136 17.3501C7.40866 17.3501 4.12946 13.5931 4.00098 7.3501H6.73844C6.82377 11.9361 8.90635 13.8794 10.5028 14.279V7.3501H13.1262V11.3078C14.666 11.1368 16.2778 9.33665 16.8196 7.3501H19.4017C18.9885 9.79294 17.2338 11.5931 15.994 12.3357C17.2348 12.9361 19.231 14.5076 20.001 17.3501H17.1628C16.5636 15.45 15.0956 13.9783 13.1271 13.7785V17.3501H12.8136Z" fill="white"/>
-            </svg>
-        </a>
-        <a class="headerfont info-2 underline" href="">vk.com/cdo_cka</a>
+        <div class="footer-inner">
+            <img src="{% static 'images/logo.png' %}" alt="" class="logo">
+            <div class="footer-text headerfont">
+                <p>Не нашли нужный тест?</p>
+                <p class="resp">Воспользуйтесь услугой
+                    <span class="train_red bold">Заказать тест</span>
+                </p>
+            </div>
+            <div class="connect">
+                <a class="ico" href="">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.000976562 11.52C0.000976562 6.08942 0.000976682 3.37413 1.68804 1.68707C3.37511 0 6.0904 0 11.521 0H12.481C17.9116 0 20.6268 0 22.3139 1.68707C24.001 3.37413 24.001 6.08942 24.001 11.52V12.48C24.001 17.9106 24.001 20.6259 22.3139 22.3129C20.6268 24 17.9116 24 12.481 24H11.521C6.0904 24 3.37511 24 1.68804 22.3129C0.000976682 20.6259 0.000976562 17.9106 0.000976562 12.48V11.52Z" fill="#0077FF"/>
+                        <path d="M12.8136 17.3501C7.40866 17.3501 4.12946 13.5931 4.00098 7.3501H6.73844C6.82377 11.9361 8.90635 13.8794 10.5028 14.279V7.3501H13.1262V11.3078C14.666 11.1368 16.2778 9.33665 16.8196 7.3501H19.4017C18.9885 9.79294 17.2338 11.5931 15.994 12.3357C17.2348 12.9361 19.231 14.5076 20.001 17.3501H17.1628C16.5636 15.45 15.0956 13.9783 13.1271 13.7785V17.3501H12.8136Z" fill="white"/>
+                    </svg>
+                </a>
+                <a class="headerfont underline" href="">vk.com/cdo_cka</a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
