--- a/dohater_site/templates/cdo_ska/create_test.html
+++ b/dohater_site/templates/cdo_ska/create_test.html
@@ -65,7 +65,7 @@
             </div>
             <div class="line"></div>
             <input class="headerfont c-search" placeholder="Название теста" type="text">
-            <div class="c-box center">
+            <div class="c-box center c-v-480">
                 <div class="mainfont">Количество вопросов</div>
                 <div class="spinbox">
                     <button class="spinbox-minus" type="button" onclick="this.nextElementSibling.stepDown(); this.nextElementSibling.onchange();">
@@ -81,14 +81,63 @@
                     </button>
                 </div>
             </div>
-            <div class="c-box top">
+            <div class="c-box top c-v-480">
                 <p class="">1</p>
                 <div class="c-box vertical">
-                    <p class="muted">Вопрос</p>
-                    <input type="text" class="headerfont c-search resize" placeholder="Вопрос">
+                    <p class="muted c-box space">Вопрос
+                        <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.1506 13.5609L1.72711 23.9848L3.1413 25.3991L13.5648 14.9752L24.3153 25.7262L25.7295 24.3119L14.9789 13.5609L25.4016 3.13788L23.9874 1.72363L13.5648 12.1467L3.46921 2.05072L2.05502 3.46497L12.1506 13.5609Z" fill="white"/>
+                            <path d="M1.72711 23.9848L1.01999 23.2777L0.312927 23.9848L1.01999 24.6919L1.72711 23.9848ZM12.1506 13.5609L12.8577 14.268L13.5648 13.5609L12.8577 12.8538L12.1506 13.5609ZM3.1413 25.3991L2.43418 26.1062L3.1413 26.8133L3.84842 26.1062L3.1413 25.3991ZM13.5648 14.9752L14.2719 14.2681L13.5648 13.5609L12.8576 14.2681L13.5648 14.9752ZM24.3153 25.7262L23.6082 26.4333L24.3153 27.1404L25.0224 26.4333L24.3153 25.7262ZM25.7295 24.3119L26.4366 25.019L27.1437 24.3119L26.4366 23.6048L25.7295 24.3119ZM14.9789 13.5609L14.2718 12.8538L13.5648 13.5609L14.2718 14.268L14.9789 13.5609ZM25.4016 3.13788L26.1087 3.84497L26.8158 3.13788L26.1087 2.43078L25.4016 3.13788ZM23.9874 1.72363L24.6945 1.01654L23.9874 0.30939L23.2803 1.01654L23.9874 1.72363ZM13.5648 12.1467L12.8576 12.8538L13.5648 13.5609L14.2719 12.8538L13.5648 12.1467ZM3.46921 2.05072L4.17633 1.34363L3.46921 0.63648L2.76209 1.34363L3.46921 2.05072ZM2.05502 3.46497L1.3479 2.75787L0.64084 3.46497L1.3479 4.17206L2.05502 3.46497ZM2.43423 24.6919L12.8577 14.268L11.4435 12.8538L1.01999 23.2777L2.43423 24.6919ZM3.84842 24.692L2.43423 23.2777L1.01999 24.6919L2.43418 26.1062L3.84842 24.692ZM12.8576 14.2681L2.43417 24.692L3.84842 26.1062L14.2719 15.6823L12.8576 14.2681ZM25.0224 25.0191L14.2719 14.2681L12.8576 15.6823L23.6082 26.4333L25.0224 25.0191ZM25.0224 23.6048L23.6082 25.0191L25.0224 26.4333L26.4366 25.019L25.0224 23.6048ZM14.2718 14.268L25.0224 25.019L26.4366 23.6048L15.6861 12.8538L14.2718 14.268ZM24.6944 2.43078L14.2718 12.8538L15.6861 14.268L26.1087 3.84497L24.6944 2.43078ZM23.2803 2.43073L24.6944 3.84497L26.1087 2.43078L24.6945 1.01654L23.2803 2.43073ZM14.2719 12.8538L24.6945 2.43072L23.2803 1.01654L12.8576 11.4396L14.2719 12.8538ZM2.76209 2.75782L12.8576 12.8538L14.2719 11.4396L4.17633 1.34363L2.76209 2.75782ZM2.76215 4.17206L4.17633 2.75782L2.76209 1.34363L1.3479 2.75787L2.76215 4.17206ZM12.8577 12.8538L2.76215 2.75787L1.3479 4.17206L11.4435 14.268L12.8577 12.8538Z" fill="white"/>
+                        </svg>
+                    </p>
+                    <input type="text" class="headerfont c-search" placeholder="Вопрос">
                     <p class="muted">Ответ</p>
-                    <input type="text" class="headerfont c-search resize" placeholder="Ответ">
+                    <input type="text" class="headerfont c-search" placeholder="Ответ">
                 </div>
+            </div>
+            <div class="line"></div>
+            <div class="c-box top c-v-480">
+                <p class="">1</p>
+                <div class="c-box vertical">
+                    <p class="muted c-box space">
+                        Изображение
+                        <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.1506 13.5609L1.72711 23.9848L3.1413 25.3991L13.5648 14.9752L24.3153 25.7262L25.7295 24.3119L14.9789 13.5609L25.4016 3.13788L23.9874 1.72363L13.5648 12.1467L3.46921 2.05072L2.05502 3.46497L12.1506 13.5609Z" fill="white"/>
+                            <path d="M1.72711 23.9848L1.01999 23.2777L0.312927 23.9848L1.01999 24.6919L1.72711 23.9848ZM12.1506 13.5609L12.8577 14.268L13.5648 13.5609L12.8577 12.8538L12.1506 13.5609ZM3.1413 25.3991L2.43418 26.1062L3.1413 26.8133L3.84842 26.1062L3.1413 25.3991ZM13.5648 14.9752L14.2719 14.2681L13.5648 13.5609L12.8576 14.2681L13.5648 14.9752ZM24.3153 25.7262L23.6082 26.4333L24.3153 27.1404L25.0224 26.4333L24.3153 25.7262ZM25.7295 24.3119L26.4366 25.019L27.1437 24.3119L26.4366 23.6048L25.7295 24.3119ZM14.9789 13.5609L14.2718 12.8538L13.5648 13.5609L14.2718 14.268L14.9789 13.5609ZM25.4016 3.13788L26.1087 3.84497L26.8158 3.13788L26.1087 2.43078L25.4016 3.13788ZM23.9874 1.72363L24.6945 1.01654L23.9874 0.30939L23.2803 1.01654L23.9874 1.72363ZM13.5648 12.1467L12.8576 12.8538L13.5648 13.5609L14.2719 12.8538L13.5648 12.1467ZM3.46921 2.05072L4.17633 1.34363L3.46921 0.63648L2.76209 1.34363L3.46921 2.05072ZM2.05502 3.46497L1.3479 2.75787L0.64084 3.46497L1.3479 4.17206L2.05502 3.46497ZM2.43423 24.6919L12.8577 14.268L11.4435 12.8538L1.01999 23.2777L2.43423 24.6919ZM3.84842 24.692L2.43423 23.2777L1.01999 24.6919L2.43418 26.1062L3.84842 24.692ZM12.8576 14.2681L2.43417 24.692L3.84842 26.1062L14.2719 15.6823L12.8576 14.2681ZM25.0224 25.0191L14.2719 14.2681L12.8576 15.6823L23.6082 26.4333L25.0224 25.0191ZM25.0224 23.6048L23.6082 25.0191L25.0224 26.4333L26.4366 25.019L25.0224 23.6048ZM14.2718 14.268L25.0224 25.019L26.4366 23.6048L15.6861 12.8538L14.2718 14.268ZM24.6944 2.43078L14.2718 12.8538L15.6861 14.268L26.1087 3.84497L24.6944 2.43078ZM23.2803 2.43073L24.6944 3.84497L26.1087 2.43078L24.6945 1.01654L23.2803 2.43073ZM14.2719 12.8538L24.6945 2.43072L23.2803 1.01654L12.8576 11.4396L14.2719 12.8538ZM2.76209 2.75782L12.8576 12.8538L14.2719 11.4396L4.17633 1.34363L2.76209 2.75782ZM2.76215 4.17206L4.17633 2.75782L2.76209 1.34363L1.3479 2.75787L2.76215 4.17206ZM12.8577 12.8538L2.76215 2.75787L1.3479 4.17206L11.4435 14.268L12.8577 12.8538Z" fill="white"/>
+                        </svg>
+                    </p>
+                    <div class="file-drop">
+                        <label for="file">
+                            <input type="file" name="file" data-role="file" data-mode="drop" data-role-file="true">
+                            <span class="icon">
+                                <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6 8V2H10V8H16V12H10V18H6V12H0V8H6ZM12 20V14H18V8H32L35.66 12H42C44.2 12 46 13.8 46 16V40C46 42.2 44.2 44 42 44H10C7.8 44 6 42.2 6 40V20H12ZM26 38C31.52 38 36 33.52 36 28C36 22.48 31.52 18 26 18C20.48 18 16 22.48 16 28C16 33.52 20.48 38 26 38ZM19.6 28C19.6 31.54 22.46 34.4 26 34.4C29.54 34.4 32.4 31.54 32.4 28C32.4 24.46 29.54 21.6 26 21.6C22.46 21.6 19.6 24.46 19.6 28Z" fill="white"/>
+                                </svg>
+                            </span>
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="c-box buttons">
+                <button class="add btn mainfont">
+                    Вопрос
+                    <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 13H25M13 1L13 25" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
+                    </svg>
+                </button>
+                <button class="add btn mainfont">
+                    Изображение
+                    <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6 8V2H10V8H16V12H10V18H6V12H0V8H6ZM12 20V14H18V8H32L35.66 12H42C44.2 12 46 13.8 46 16V40C46 42.2 44.2 44 42 44H10C7.8 44 6 42.2 6 40V20H12ZM26 38C31.52 38 36 33.52 36 28C36 22.48 31.52 18 26 18C20.48 18 16 22.48 16 28C16 33.52 20.48 38 26 38ZM19.6 28C19.6 31.54 22.46 34.4 26 34.4C29.54 34.4 32.4 31.54 32.4 28C32.4 24.46 29.54 21.6 26 21.6C22.46 21.6 19.6 24.46 19.6 28Z" fill="white"/>
+                    </svg>
+                </button>
+                <button class="upload btn mainfont">
+                    Опубликовать
+                    <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8 26L18 36L40 14" stroke="white" stroke-width="2" stroke-linecap="round"/>
+                    </svg>
+                </button>
             </div>
         </div>
     </div> 
