--- a/dohater_site/templates/cdo_ska/create_test.html
+++ b/dohater_site/templates/cdo_ska/create_test.html
@@ -4,7 +4,7 @@
 
 {% block links %}
 <link rel="stylesheet" href="{% static 'css/home.css' %}">
-<link rel="stylesheet" href="{% static 'css/create_test.css' %}">
+<link rel="stylesheet" href="{% static 'css/test.css' %}">
 <link rel="stylesheet" href="{% static 'css/dropdown.css' %}">
 <link rel="stylesheet" href="{% static 'css/spinbox.css' %}">
 {% endblock links %}
@@ -97,7 +97,7 @@
             </div>
             <div class="line"></div>
             <div class="c-box top c-v-480">
-                <p class="">1</p>
+                <p class="">2</p>
                 <div class="c-box vertical">
                     <p class="muted c-box space">
                         Изображение
