--- a/dohater_site/templates/cdo_ska/index.html
+++ b/dohater_site/templates/cdo_ska/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="container bg-red fat">
-            <div class="nav-wrapper">
+            <form class="nav-wrapper">
                 <svg id="burger" width="49" height="49" viewBox="0 0 49 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="hamburger">
                     <g id="Group">
@@ -44,12 +44,10 @@
                     </g>
                 </svg>
                 <img id="logo" src="{% static 'images/logo.png' %}" alt="" class="logo">
-                <form action="{% url 'home' %}" method="get">
-                    {% csrf_token %}
-                    <input id="" class="headerfont search" placeholder="Найти вопрос, ответ, тему или раздел" type="text" name="query">
-                    <input type="submit" hidden/>
-                </form>
-            </div>
+                {% csrf_token %}
+                <input id="" class="headerfont search" placeholder="Найти вопрос, ответ, тему или раздел" type="text" name="query">
+                <input type="submit" hidden/>
+            </form>
         </div>
         <div class="line"></div>
     </nav>
